--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
     letter-spacing: -1px; 
     line-height: 1; 
     text-align: left;   
+    width: 100%;
+    height: 250px;
 }
 .navBar {
     color: #FFA500; 
